Make `gn refs out/foo //out/foo/gn` work.

It would be good if we could use `gn refs` to tell us which
target generated a given executable. The docs suggested that
refs should do this, but it doesn't appear to do so.

Bug: 837876
Change-Id: I45f45bb3346ed21ede83fbacdea2207f1322ad69
Reviewed-on: https://chromium-review.googlesource.com/1033506
Commit-Queue: Dirk Pranke <dpranke@chromium.org>
Reviewed-by: Brett Wilson <brettw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555134}
Former-commit-id: 3d36fd0d000ced51aa0a2848b1df0b2cd36cc4c5