tools/gn/command_refs.cc
@@ -155,10 +155,15 @@ bool TargetContainsFile(const Target* target, const SourceFile& file) {
   if (target->action_values().script().value() == file.value())
     return true;
 
-  std::vector<SourceFile> outputs;
-  target->action_values().GetOutputsAsSourceFiles(target, &outputs);
-  for (const auto& cur_file : outputs) {
+  std::vector<SourceFile> output_sources;
+  target->action_values().GetOutputsAsSourceFiles(target, &output_sources);
+  for (const auto& cur_file : output_sources) {
     if (cur_file == file)
+      return true;
+  }
+
+  for (const auto& cur_file : target->computed_outputs()) {
+    if (cur_file.AsSourceFile(target->settings()->build_settings()) == file)
       return true;
   }
   return false;
